--- a/sklepspozywczy/src/main/webapp/assets/css/fontello-codes.css
+++ b/sklepspozywczy/src/main/webapp/assets/css/fontello-codes.css
@@ -1,3 +1,4 @@
 
 .icon-eye:before { content: '\e800'; } /* '' */
+.icon-pencil:before { content: '\e801'; } /* '' */
 .icon-cart-plus:before { content: '\f217'; } /* '' */
